--- a/application/views/original/index.html
+++ b/application/views/original/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.png">
 
-    <title>DUMBOBAY - shopping area</title>
+    <title>SPOT - Free Bootstrap 3 Theme</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -36,13 +36,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">DUMB<i class="fa fa-circle"></i>BAY</a>
+          <a class="navbar-brand" href="#">SP<i class="fa fa-circle"></i>T</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="index.html">HOME</a></li>
-            <li><a data-toggle="modal" data-target="#myModal" href="#myModal">SIGN IN</a></li>
-            <li><a href="services.html">SIGN UP</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="services.html">SERVICES</a></li>
             <li><a href="works.html">WORKS</a></li>
             <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li>
           </ul>
@@ -54,9 +54,8 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-8 col-lg-offset-2">
-				<h1>Just let me <b>Shop</b> and no one gets hurt.</h1>
-				<h2>- DumboBay -</h2>
-				<h2><a href="#" class=""><b>> Products <</b></a></h2>
+				<h1>It Doesn't Take a Rocket <b>Scientist</b></h1>
+				<h2>It Takes a Designer</h2>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
@@ -73,10 +72,9 @@
 			</div><!-- col-lg-4 -->
 
 			<div class="col-lg-4">
-				<!-- <i class="fa fa-laptop"></i> -->
-				<img src="assets/img/frappe_logo-small.gif">
-				<h4>Frappe & Co,.</h4>
-				<!-- <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p> -->
+				<i class="fa fa-laptop"></i>
+				<h4>BOOTSTRAP</h4>
+				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
 			</div><!-- col-lg-4 -->
 
 			<div class="col-lg-4">
@@ -90,7 +88,7 @@
 	</div><!-- container -->
 
 
-	<!-- PORTFOLIO SECTION 
+	<!-- PORTFOLIO SECTION -->
 	<div id="dg">
 		<div class="container">
 			<div class="row centered">
@@ -113,12 +111,12 @@
 					<a href="#"><img src="assets/img/p02.png" alt=""></a>
 					</div>
 				</div>
-			</div><!-- row 
-		</div><!-- container 
+			</div><!-- row -->
+		</div><!-- container -->
 	</div><!-- DG -->
 
 
-	<!-- FEATURE SECTION 
+	<!-- FEATURE SECTION -->
 	<div class="container wb">
 		<div class="row centered">
 			<br><br>
@@ -131,8 +129,8 @@
 			<div class="col-lg-10 col-lg-offset-1">
 				<img class="img-responsive" src="assets/img/munter.png" alt="">
 			</div>
-		</div><!-- row 
-	</div><!-- container 
+		</div><!-- row -->
+	</div><!-- container -->
 
 
 	<div id="lg">
@@ -154,9 +152,9 @@
 				<div class="col-lg-2">
 					<img src="assets/img/c05.gif" alt="">
 				</div>
-			</div><!-- row 
-		</div><!-- container 
-	</div><!-- dg 
+			</div><!-- row -->
+		</div><!-- container -->
+	</div><!-- dg -->
 	
 	
 	<div id="r">
@@ -166,9 +164,9 @@
 					<h4>WE ARE STORYTELLERS. BRANDS ARE OUR SUBJECTS. DESIGN IS OUR VOICE.</h4>
 					<p>We believe ideas come from everyone, everywhere. At BlackTie, everyone within our agency walls is a designer in their own right. And there are a few principles we believe—and we believe everyone should believe—about our design craft. These truths drive us, motivate us, and ultimately help us redefine the power of design.</p>
 				</div>
-			</div><!-- row 
-		</div><!-- container 
-	</div><!-- r wrap -->
+			</div><!-- row -->
+		</div><!-- container -->
+	</div><! -- r wrap -->
 	
 	
 	<!-- FOOTER -->
@@ -189,39 +187,25 @@
 	    <div class="modal-content">
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-	        <h4 class="modal-title" id="myModalLabel">DumboBay</h4>
+	        <h4 class="modal-title" id="myModalLabel">contact us</h4>
 	      </div>
-	      <!-- Log in form -->
-	      <form class="form-horizontal">
-	      	<div class="modal-body">
+	      <div class="modal-body">
 		        <div class="row centered">
-					  <fieldset>
-					    <legend>SIGN IN</legend>
-					    <div align="center">
-					    <div class="form-group">
-					      <label style="left:20%" for="inputEmail" class="col-lg-2 control-label">Username</label>
-					      <div class="col-lg-10">
-					        <input style="width:50%" type="text" class="form-control" id="inputEmail" placeholder="Put your username in here." >
-					      </div>
-					    </div>
-					    <div class="form-group">
-					      <label style="left:20%" for="inputPassword" class="col-lg-2 control-label">Password</label>
-					      <div class="col-lg-10">
-					        <input style="width:50%" type="password" class="form-control" id="inputPassword" placeholder="********">
-					      </div>
-					    </div>
-					    </div>
-					  </fieldset>
+		        	<p>We are available 24/7, so don't hesitate to contact us.</p>
+		        	<p>
+		        		Somestreet Ave, 987<br/>
+						London, UK.<br/>
+						+44 8948-4343<br/>
+						hi@blacktie.co
+		        	</p>
+		        	<div id="mapwrap">
+		<iframe height="300" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.es/maps?t=m&amp;ie=UTF8&amp;ll=52.752693,22.791016&amp;spn=67.34552,156.972656&amp;z=2&amp;output=embed"></iframe>
+					</div>	
 		        </div>
-	      	</div>
-		    <div class="modal-footer">
-		      <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-		      <a href="buyer_home.html"><button type="button" class="btn btn-danger">Sign In:Buyer</button></a>
-		      <a href="seller_home.html"><button type="button" class="btn btn-danger">Sign In:Seller</button></a>
-		      <a href="admin_home.html"><button type="button" class="btn btn-danger" >Sign In:Admin</button></a>
-		    </div>
-	      </form>
-	      <!-- /Log in form -->
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-danger" data-dismiss="modal">Save & Go</button>
+	      </div>
 	    </div><!-- /.modal-content -->
 	  </div><!-- /.modal-dialog -->
 	</div><!-- /.modal -->
