--- a/application/views/index.html
+++ b/application/views/index.html
@@ -216,6 +216,7 @@
 	      	</div>
 		    <div class="modal-footer">
 		      <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+		      <a href="buyer_home.html"><button type="button" class="btn btn-danger">Sign In</button></a>
 		      <a href="buyer_home.html"><button type="button" class="btn btn-danger">Sign In:Buyer</button></a>
 		      <a href="seller_home.html"><button type="button" class="btn btn-danger">Sign In:Seller</button></a>
 		      <a href="admin_home.html"><button type="button" class="btn btn-danger" >Sign In:Admin</button></a>
