--- a/application/views/buyer_home.html
+++ b/application/views/buyer_home.html
@@ -41,7 +41,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
 
-            <li class="active"><a href="#">HOME</a></li>
+            <li class="active"><a href="index.html">HOME</a></li>
             <li><a href="#">PRODUCT</a></li>
             <li><a href="#">MY CART</a></li>
             <li><a href="#">WATCH LIST</a></li>
@@ -56,11 +56,11 @@
       </div>
     </div>
 
-	<div id="headerwrap">
+	<div class="container wb">
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-8 col-lg-offset-2">
-				<h1>- Buyer -</h1>
+				<h4>- Buyer -</h4>
 				<h3><a href="#" class=""><b>> Product <</b></a></h3>
 				<h3><a href="#" class=""><b>> My Cart <</b></a></h3>
 				<h3><a href="#" class=""><b>> Watch List <</b></a></h3>
@@ -73,7 +73,7 @@
 	</div><!-- headerwrap -->
 
 
-	<div class="container w">
+	<div id="lg">
 		<div class="row centered">
 			<br><br>
 			<div class="col-lg-4">
