--- a/application/views/about.html
+++ b/application/views/about.html
@@ -56,8 +56,8 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-8 col-lg-offset-2">
-				<h4>GO SHOPPING WITH US</h4>
-				<p>Please sign in</p>
+				<h4>LEARN MORE ABOUT US</h4>
+				<p>WE ARE COOL PEOPLE</p>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
