--- a/application/views/products.html
+++ b/application/views/products.html
@@ -48,19 +48,64 @@
         </div><!--/.nav-collapse -->
       </div>
     </div>
-
-	<div id="headerwrap">
+    <div id="headerwrap">
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-8 col-lg-offset-2">
 				<h1>Just let me <b>Shop</b> and no one gets hurt.</h1>
 				<h2>- DumboBay -</h2>
-				<h2><a href="products.html" class=""><b>> Products <</b></a></h2>
+				
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
 	</div><!-- headerwrap -->
+	<div class="container w">
+		<div class="container">
+			<div class="row centered">
+				<img src="assets/img/products.png">
+				<div class="col-lg-8 col-lg-offset-2">
+				<h2>- Products -</h2>
+				</div>
+			</div><!-- row -->
+		</div><!-- container -->
+	</div>
+	
+	<div class="container desc">
+		<div class="row">
+			<div class="col-lg-6 centered">
+				<h1>Direct Sale</h1>
+			</div><!-- col-lg-6 -->
+			<div class="col-lg-6 centered">
+				<h1>Auction</h1>
+			</div>
+			<br><br>
+			<!--search -->
 
+			<br><br><!-- end search -->
+			<div class="col-lg-6 centered" style="height:450px;overflow:auto">
+				<div><img src="assets/img/frappe_logo-small.gif">Macbook Air | 40,500฿</div>
+				<div><img src="assets/img/frappe_logo-small.gif">Macbook Air | 40,500฿</div>
+				<div><img src="assets/img/frappe_logo-small.gif">Macbook Air | 40,500฿</div>
+				<div><img src="assets/img/frappe_logo-small.gif">Macbook Air | 40,500฿</div>
+				<div><img src="assets/img/frappe_logo-small.gif">Macbook Air | 40,500฿</div>
+			</div><!-- col-lg-6 -->
+			<div class="col-lg-6" style="height:450px;overflow:auto">
+				<h4>CLIENT NAME</h4>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+				<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+				<p>
+					<i class="fa fa-circle-o"></i> Mobile Design<br/>
+					<i class="fa fa-circle-o"></i> Web Design<br/>
+					<i class="fa fa-circle-o"></i> Development<br/>
+					<i class="fa fa-link"></i> <a href="#">BlackTie.co</a>
+				</p>
+				<h4>CLIENT NAME</h4>
+				<h4>CLIENT NAME</h4>
+				<h4>CLIENT NAME</h4>
+				<h4>CLIENT NAME</h4>
+			</div>
+		</div><!-- row -->
+	</div><!-- container -->
 
 	<div class="container w">
 		<div class="row centered">
@@ -87,88 +132,6 @@
 		<br>
 		<br>
 	</div><!-- container -->
-
-
-	<!-- PORTFOLIO SECTION 
-	<div id="dg">
-		<div class="container">
-			<div class="row centered">
-				<h4>LATEST WORKS</h4>
-				<br>
-				<div class="col-lg-4">
-					<div class="tilt">
-					<a href="#"><img src="assets/img/p01.png" alt=""></a>
-					</div>
-				</div>
-
-				<div class="col-lg-4">
-					<div class="tilt">
-					<a href="#"><img src="assets/img/p03.png" alt=""></a>
-					</div>
-				</div>
-
-				<div class="col-lg-4">
-					<div class="tilt">
-					<a href="#"><img src="assets/img/p02.png" alt=""></a>
-					</div>
-				</div>
-			</div><!-- row 
-		</div><!-- container 
-	</div><!-- DG -->
-
-
-	<!-- FEATURE SECTION 
-	<div class="container wb">
-		<div class="row centered">
-			<br><br>
-			<div class="col-lg-8 col-lg-offset-2">
-				<h4>WE CREATE FIRST CLASS DESIGN</h4>
-				<p>By being true to the brand we represent, we elevate the audiences’ relationship to it. Like becomes love becomes a passion. Passion becomes advocacy. And we see the brand blossom from within, creating a whole story the audience embraces. That’s when the brand can truly flex its muscles.</p>
-			<p><br/><br/></p>
-			</div>
-			<div class="col-lg-2"></div>
-			<div class="col-lg-10 col-lg-offset-1">
-				<img class="img-responsive" src="assets/img/munter.png" alt="">
-			</div>
-		</div><!-- row 
-	</div><!-- container 
-
-
-	<div id="lg">
-		<div class="container">
-			<div class="row centered">
-				<h4>OUR AWESOME CLIENTS</h4>
-				<div class="col-lg-2 col-lg-offset-1">
-					<img src="assets/img/c01.gif" alt="">
-				</div>
-				<div class="col-lg-2">
-					<img src="assets/img/c02.gif" alt="">
-				</div>
-				<div class="col-lg-2">
-					<img src="assets/img/c03.gif" alt="">
-				</div>
-				<div class="col-lg-2">
-					<img src="assets/img/c04.gif" alt="">
-				</div>
-				<div class="col-lg-2">
-					<img src="assets/img/c05.gif" alt="">
-				</div>
-			</div><!-- row 
-		</div><!-- container 
-	</div><!-- dg 
-	
-	
-	<div id="r">
-		<div class="container">
-			<div class="row centered">
-				<div class="col-lg-8 col-lg-offset-2">
-					<h4>WE ARE STORYTELLERS. BRANDS ARE OUR SUBJECTS. DESIGN IS OUR VOICE.</h4>
-					<p>We believe ideas come from everyone, everywhere. At BlackTie, everyone within our agency walls is a designer in their own right. And there are a few principles we believe—and we believe everyone should believe—about our design craft. These truths drive us, motivate us, and ultimately help us redefine the power of design.</p>
-				</div>
-			</div><!-- row 
-		</div><!-- container 
-	</div><!-- r wrap -->
-	
 	
 	<!-- FOOTER -->
 	<div id="f">
