--- a/application/views/services.html
+++ b/application/views/services.html
@@ -17,8 +17,6 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
 
-	<script src="assets/js/Chart.js"></script>
-
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -43,8 +41,8 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html">HOME</a></li>
-            <li class="active"><a href="about.html">ABOUT</a></li>
-            <li><a href="services.html">SERVICES</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li class="active"><a href="services.html">SERVICES</a></li>
             <li><a href="works.html">WORKS</a></li>
             <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li>
           </ul>
@@ -56,147 +54,137 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-8 col-lg-offset-2">
-				<h4>GO SHOPPING WITH US</h4>
-				<p>Please sign in</p>
+				<h4>WE CAN DO A LOT OF THINGS</b></h4>
+				<p>JUST TAKE A LOOK & CONTACT US</p>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
-	</div><!--  bluewrap -->
+	</div><!-- blue wrap -->
 
 
 	<div class="container w">
 		<div class="row centered">
 			<br><br>
-			<div class="col-lg-3">
-				<img class="img-circle" src="assets/img/pic.jpg" width="110" height="110" alt="">
-				<h4>Frank Lampard</h4>
+			<div class="col-lg-4">
+				<i class="fa fa-desktop"></i>
+				<h4>WEB DESIGN</h4>
 				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
-				<p><a href="#">@Frank_BlackTie</a></p>
-			</div><!-- col-lg-3 -->
+			</div><!-- col-lg-4 -->
 
-			<div class="col-lg-3">
-				<img class="img-circle" src="assets/img/pic2.jpg" width="110" height="110" alt="">
-				<h4>David Wright</h4>
+			<div class="col-lg-4">
+				<i class="fa fa-cogs"></i>
+				<h4>WEB DEVELOPMENT</h4>
 				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
-				<p><a href="#">@David_BlackTie</a></p>
-			</div><!-- col-lg-3 -->
+			</div><!-- col-lg-4 -->
 
-			<div class="col-lg-3">
-				<img class="img-circle" src="assets/img/pic3.jpg" width="110" height="110" alt="">
-				<h4>Mark Milestone</h4>
+			<div class="col-lg-4">
+				<i class="fa fa-eye"></i>
+				<h4>SEO SERVICES</h4>
 				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
-				<p><a href="#">@Mark_BlackTie</a></p>
-			</div><!-- col-lg-3 -->
-
-			<div class="col-lg-3">
-				<img class="img-circle" src="assets/img/pic4.jpg" width="110" height="110" alt="">
-				<h4>Tania Tissen</h4>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
-				<p><a href="#">@Tania_BlackTie</a></p>
-			</div><!-- col-lg-3 -->
-
+			</div><!-- col-lg-4 -->
 		</div><!-- row -->
 		<br>
-		<br>
+		<div class="row centered">
+			<br><br>
+			<div class="col-lg-4">
+				<i class="fa fa-heart"></i>
+				<h4>SOCIAL MEDIA</h4>
+				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+			</div><!-- col-lg-4 -->
+
+			<div class="col-lg-4">
+				<i class="fa fa-shopping-cart"></i>
+				<h4>E-COMMERCE</h4>
+				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+			</div><!-- col-lg-4 -->
+
+			<div class="col-lg-4">
+				<i class="fa fa-cloud"></i>
+				<h4>CLOUD SERVICES</h4>
+				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+			</div><!-- col-lg-4 -->
+		</div><!-- row -->
 	</div><!-- container -->
 
 
-	<!-- PORTFOLIO SECTION -->
+	<!-- PRICING SECTION -->
 	<div id="dg">
 		<div class="container">
 			<div class="row centered">
-				<h4>OUR SKILLS</h4>
+				<h4>PRICING PLANS</h4>
 				<br>
+				<div class="col-lg-4">
+                    <!-- START PRICING TABLE -->
+                    <div class="pricing-option">
+                        <div class="pricing-top">
+                            <span class="pricing-edition">Starter</span>
+                            <span class="price">
+                                <sup>$</sup>
+                                <span class="price-amount">19</span>
+                                <small>/mo</small>
+                            </span>
+                        </div>
+                        <ul>
+                            <li><strong>10GB</strong> Storage</li>
+                            <li>Up to <strong>10</strong> Users</li>
+                            <li><strong>5</strong> Domains</li>
+                            <li><strong>Free</strong> Setup</li>
+                            <li><strong>1-year</strong> Free support *</li>
+                        </ul>
+                        <a href="index.html#" class="pricing-signup">Sign up</a>
+                    </div><!-- /pricing-option -->
+                    <!-- END PRICING TABLE -->
+				</div><!-- /col -->
 				
-			<!-- First Chart -->
-			<div class="col-lg-3">
-				<canvas id="canvas" height="130" width="130"></canvas>
-				<br>
-				<script>
-					var doughnutData = [
-							{
-								value: 70,
-								color:"#3498db"
-							},
-							{
-								value : 30,
-								color : "#ecf0f1"
-							}
-						];
-						var myDoughnut = new Chart(document.getElementById("canvas").getContext("2d")).Doughnut(doughnutData);
-				</script>
-				<p><b>Design & Brand</b></p>
-				<p><small>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</small></p>
-			</div><!-- /col-lg-3 -->
-
-			<!-- Second Chart -->
-			<div class="col-lg-3">
-				<canvas id="canvas2" height="130" width="130"></canvas>
-				<br>
-				<script>
-					var doughnutData = [
-							{
-								value: 90,
-								color:"#3498db"
-							},
-							{
-								value : 10,
-								color : "#ecf0f1"
-							}
-						];
-						var myDoughnut = new Chart(document.getElementById("canvas2").getContext("2d")).Doughnut(doughnutData);
-				</script>
-				<p><b>Web Development</b></p>
-				<p><small>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</small></p>
-			</div><!-- /col-lg-3 -->
-			
-			<!-- Third Chart -->
-			<div class="col-lg-3">
-				<canvas id="canvas3" height="130" width="130"></canvas>
-				<br>
-				<script>
-					var doughnutData = [
-							{
-								value: 50,
-								color:"#3498db"
-							},
-							{
-								value : 50,
-								color : "#ecf0f1"
-							}
-						];
-						var myDoughnut = new Chart(document.getElementById("canvas3").getContext("2d")).Doughnut(doughnutData);
-				</script>
-				<p><b>Seo Services</b></p>
-				<p><small>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</small></p>
-			</div><!-- /col-lg-3 -->
-			
-			<!-- Fourth Chart -->
-			<div class="col-lg-3">
-				<canvas id="canvas4" height="130" width="130"></canvas>
-				<br>
-				<script>
-					var doughnutData = [
-							{
-								value: 80,
-								color:"#3498db"
-							},
-							{
-								value : 20,
-								color : "#ecf0f1"
-							}
-						];
-						var myDoughnut = new Chart(document.getElementById("canvas4").getContext("2d")).Doughnut(doughnutData);
-				</script>
-				<p><b>Printing</b></p>
-				<p><small>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</small></p>
-			</div><!-- /col-lg-3 -->
+				<div class="col-lg-4">
+                    <!-- START PRICING TABLE -->
+                    <div class="pricing-option">
+                        <div class="pricing-top">
+                            <span class="pricing-edition">Standard</span>
+                            <span class="price">
+                                <sup>$</sup>
+                                <span class="price-amount">29</span>
+                                <small>/mo</small>
+                            </span>
+                        </div>
+                        <ul>
+                            <li><strong>20GB</strong> Storage</li>
+                            <li>Up to <strong>20</strong> Users</li>
+                            <li><strong>10</strong> Domains</li>
+                            <li><strong>Free</strong> Setup</li>
+                            <li><strong>2-year</strong> Free support *</li>
+                        </ul>
+                        <a href="index.html#" class="pricing-signup">Sign up</a>
+                    </div><!-- /pricing-option -->
+                    <!-- END PRICING TABLE -->
+				</div><!-- /col -->
 				
-				
+				<div class="col-lg-4">
+                    <!-- START PRICING TABLE -->
+                    <div class="pricing-option">
+                        <div class="pricing-top">
+                            <span class="special-label">OFFER!</span>
+                            <span class="pricing-edition">Ultimate</span>
+                            <span class="price">
+                                <sup>$</sup>
+                                <span class="price-amount">69</span>
+                                <small>/mo</small>
+                            </span>
+                        </div>
+                        <ul>
+                            <li><strong>150GB</strong> Storage</li>
+                            <li><strong>Unlimited</strong> Users</li>
+                            <li><strong>50</strong> Domains</li>
+                            <li><strong>Free</strong> Setup</li>
+                            <li><strong>5-year</strong> Free support *</li>
+                        </ul>
+                        <a href="index.html#" class="pricing-signup">Sign up</a>
+                    </div><!-- /pricing-option -->
+                    <!-- END PRICING TABLE -->
+				</div><!-- /col -->
 			</div><!-- row -->
 		</div><!-- container -->
 	</div><!-- DG -->
-
 
 
 	
