--- a/application/views/works.html
+++ b/application/views/works.html
@@ -17,8 +17,6 @@
     <!-- Custom styles for this template -->
     <link href="assets/css/main.css" rel="stylesheet">
 
-	<script src="assets/js/Chart.js"></script>
-
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -43,9 +41,9 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="index.html">HOME</a></li>
-            <li class="active"><a href="about.html">ABOUT</a></li>
+            <li><a href="about.html">ABOUT</a></li>
             <li><a href="services.html">SERVICES</a></li>
-            <li><a href="works.html">WORKS</a></li>
+            <li class="active"><a href="works.html">WORKS</a></li>
             <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -56,148 +54,74 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-8 col-lg-offset-2">
-				<h4>GO SHOPPING WITH US</h4>
-				<p>Please sign in</p>
+				<h4>WE WORK HARD TO ACHIEVE EXCELLENCE</h4>
+				<p>AND WE ARE HAPPY TO DO IT</p>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
 	</div><!--  bluewrap -->
 
 
-	<div class="container w">
-		<div class="row centered">
+	<div class="container desc">
+		<div class="row">
 			<br><br>
-			<div class="col-lg-3">
-				<img class="img-circle" src="assets/img/pic.jpg" width="110" height="110" alt="">
-				<h4>Frank Lampard</h4>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
-				<p><a href="#">@Frank_BlackTie</a></p>
-			</div><!-- col-lg-3 -->
-
-			<div class="col-lg-3">
-				<img class="img-circle" src="assets/img/pic2.jpg" width="110" height="110" alt="">
-				<h4>David Wright</h4>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
-				<p><a href="#">@David_BlackTie</a></p>
-			</div><!-- col-lg-3 -->
-
-			<div class="col-lg-3">
-				<img class="img-circle" src="assets/img/pic3.jpg" width="110" height="110" alt="">
-				<h4>Mark Milestone</h4>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
-				<p><a href="#">@Mark_BlackTie</a></p>
-			</div><!-- col-lg-3 -->
-
-			<div class="col-lg-3">
-				<img class="img-circle" src="assets/img/pic4.jpg" width="110" height="110" alt="">
-				<h4>Tania Tissen</h4>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
-				<p><a href="#">@Tania_BlackTie</a></p>
-			</div><!-- col-lg-3 -->
-
+			<div class="col-lg-6 centered">
+				<img src="assets/img/p03.png" alt="">
+			</div><!-- col-lg-6 -->
+			<div class="col-lg-6">
+				<h4>CLIENT NAME</h4>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+				<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+				<p>
+					<i class="fa fa-circle-o"></i> Mobile Design<br/>
+					<i class="fa fa-circle-o"></i> Web Design<br/>
+					<i class="fa fa-circle-o"></i> Development<br/>
+					<i class="fa fa-link"></i> <a href="#">BlackTie.co</a>
+				</p>
+			</div>
 		</div><!-- row -->
-		<br>
-		<br>
+		
+		<br><br>
+		<hr>
+		<br><br>
+		<div class="row">
+			<div class="col-lg-6 centered">
+				<img src="assets/img/p01.png" alt="">
+			</div><!-- col-lg-6 -->
+			<div class="col-lg-6">
+				<h4>CLIENT NAME</h4>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+				<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+				<p>
+					<i class="fa fa-circle-o"></i> Mobile Design<br/>
+					<i class="fa fa-circle-o"></i> Web Design<br/>
+					<i class="fa fa-circle-o"></i> Development<br/>
+					<i class="fa fa-link"></i> <a href="#">BlackTie.co</a>
+				</p>
+			</div>
+		</div><!-- row -->
+
+		<br><br>
+		<hr>
+		<br><br>
+		<div class="row">
+			<div class="col-lg-6 centered">
+				<img src="assets/img/p02.png" alt="">
+			</div><!-- col-lg-6 -->
+			<div class="col-lg-6">
+				<h4>CLIENT NAME</h4>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+				<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+				<p>
+					<i class="fa fa-circle-o"></i> Mobile Design<br/>
+					<i class="fa fa-circle-o"></i> Web Design<br/>
+					<i class="fa fa-circle-o"></i> Development<br/>
+					<i class="fa fa-link"></i> <a href="#">BlackTie.co</a>
+				</p>
+			</div>
+		</div><!-- row -->
+		<br><br>
 	</div><!-- container -->
-
-
-	<!-- PORTFOLIO SECTION -->
-	<div id="dg">
-		<div class="container">
-			<div class="row centered">
-				<h4>OUR SKILLS</h4>
-				<br>
-				
-			<!-- First Chart -->
-			<div class="col-lg-3">
-				<canvas id="canvas" height="130" width="130"></canvas>
-				<br>
-				<script>
-					var doughnutData = [
-							{
-								value: 70,
-								color:"#3498db"
-							},
-							{
-								value : 30,
-								color : "#ecf0f1"
-							}
-						];
-						var myDoughnut = new Chart(document.getElementById("canvas").getContext("2d")).Doughnut(doughnutData);
-				</script>
-				<p><b>Design & Brand</b></p>
-				<p><small>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</small></p>
-			</div><!-- /col-lg-3 -->
-
-			<!-- Second Chart -->
-			<div class="col-lg-3">
-				<canvas id="canvas2" height="130" width="130"></canvas>
-				<br>
-				<script>
-					var doughnutData = [
-							{
-								value: 90,
-								color:"#3498db"
-							},
-							{
-								value : 10,
-								color : "#ecf0f1"
-							}
-						];
-						var myDoughnut = new Chart(document.getElementById("canvas2").getContext("2d")).Doughnut(doughnutData);
-				</script>
-				<p><b>Web Development</b></p>
-				<p><small>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</small></p>
-			</div><!-- /col-lg-3 -->
-			
-			<!-- Third Chart -->
-			<div class="col-lg-3">
-				<canvas id="canvas3" height="130" width="130"></canvas>
-				<br>
-				<script>
-					var doughnutData = [
-							{
-								value: 50,
-								color:"#3498db"
-							},
-							{
-								value : 50,
-								color : "#ecf0f1"
-							}
-						];
-						var myDoughnut = new Chart(document.getElementById("canvas3").getContext("2d")).Doughnut(doughnutData);
-				</script>
-				<p><b>Seo Services</b></p>
-				<p><small>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</small></p>
-			</div><!-- /col-lg-3 -->
-			
-			<!-- Fourth Chart -->
-			<div class="col-lg-3">
-				<canvas id="canvas4" height="130" width="130"></canvas>
-				<br>
-				<script>
-					var doughnutData = [
-							{
-								value: 80,
-								color:"#3498db"
-							},
-							{
-								value : 20,
-								color : "#ecf0f1"
-							}
-						];
-						var myDoughnut = new Chart(document.getElementById("canvas4").getContext("2d")).Doughnut(doughnutData);
-				</script>
-				<p><b>Printing</b></p>
-				<p><small>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</small></p>
-			</div><!-- /col-lg-3 -->
-				
-				
-			</div><!-- row -->
-		</div><!-- container -->
-	</div><!-- DG -->
-
-
 
 	
 	<div id="r">
