--- a/application/views/index.html
+++ b/application/views/index.html
@@ -85,27 +85,19 @@
 			<!--search -->
 
 			<br><br><!-- end search -->
-			<div class="col-lg-6 centered" style="height:450px;overflow:auto">
-				<div><img src="assets/img/frappe_logo-small.gif">Macbook Air | 40,500฿</div>
-				<div><img src="assets/img/frappe_logo-small.gif">Macbook Air | 40,500฿</div>
-				<div><img src="assets/img/frappe_logo-small.gif">Macbook Air | 40,500฿</div>
-				<div><img src="assets/img/frappe_logo-small.gif">Macbook Air | 40,500฿</div>
-				<div><img src="assets/img/frappe_logo-small.gif">Macbook Air | 40,500฿</div>
+			<div class="col-lg-6" style="height:450px;overflow:auto">
+				<div><img src="assets/img/macbook.png">Macbook Air | 40,500฿</div>
+				<div><img src="assets/img/macbook.png">Macbook Air | 40,500฿</div>
+				<div><img src="assets/img/macbook.png">Macbook Air | 40,500฿</div>
+				<div><img src="assets/img/macbook.png">Macbook Air | 40,500฿</div>
+				<div><img src="assets/img/macbook.png">Macbook Air | 40,500฿</div>
 			</div><!-- col-lg-6 -->
 			<div class="col-lg-6" style="height:450px;overflow:auto">
-				<h4>CLIENT NAME</h4>
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-				<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-				<p>
-					<i class="fa fa-circle-o"></i> Mobile Design<br/>
-					<i class="fa fa-circle-o"></i> Web Design<br/>
-					<i class="fa fa-circle-o"></i> Development<br/>
-					<i class="fa fa-link"></i> <a href="#">BlackTie.co</a>
-				</p>
-				<h4>CLIENT NAME</h4>
-				<h4>CLIENT NAME</h4>
-				<h4>CLIENT NAME</h4>
-				<h4>CLIENT NAME</h4>
+				<div><img src="assets/img/macbook.png">Macbook Air | Max bid: 3500฿ | remaining time: 2:07 |</div>
+				<div><img src="assets/img/macbook.png">Macbook Air | Max bid: 10500฿ | remaining time: 1:24 |</div>
+				<div><img src="assets/img/macbook.png">Macbook Air | Max bid: 3500฿ | remaining time: 2:07 |</div>
+				<div><img src="assets/img/macbook.png">Macbook Air | Max bid: 3500฿ | remaining time: 2:07 |</div>
+				<div><img src="assets/img/macbook.png">Macbook Air | Max bid: 3500฿ | remaining time: 2:07 |</div>
 			</div>
 		</div><!-- row -->
 	</div><!-- container -->
@@ -298,7 +290,7 @@
                  * which scales the box to default size
                  * You can try other effects from here: http://jqueryui.com/effect/
                  */
-                $("#headerwrap").delay("fast").fadeOut(); 
+                $("#headerwrap").fadeOut(); 
                 $('.product').fadeIn();
             });
             $('#back').click(function(){
@@ -307,7 +299,7 @@
                  * which scales the box to default size
                  * You can try other effects from here: http://jqueryui.com/effect/
                  */
-                 $('.product').delay("fast").fadeOut(); 
+                 $('.product').fadeOut(); 
                 $("#headerwrap").fadeIn();
             });
         });
