--- a/application/views/testdiv.html
+++ b/application/views/testdiv.html
@@ -13,7 +13,7 @@
 				</div>
 				<div style="width:200px;height:20px;border-style:solid;border-color:green;float:top"></div>
 			</div>
-			<div style="width:50px;heigth:100px;float:left;border-style:solid"></div>
+			<div style="width:50px;height:100px;float:left;border-style:solid"></div>
 		</div>
 	</body>
 </html>
