kao renew table style kaaaaaaa

--- a/application/views/messegeBox.html
+++ b/application/views/messegeBox.html
@@ -70,7 +70,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">DUMB<i class="fa fa-circle"></i>BAY</a>
+          <a class="navbar-brand" href="index.html">DUMB<i class="fa fa-circle"></i>BAY</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -201,14 +201,24 @@
     <div class="container">
        <table style="width:100%">
           <tr>
-            <h2><td style="witdh:20%">Received time</td></h2>
-            <h2><td style="witdh:30%">From</td></h2>
-            <h2><td style="witdh:50%">Topic</td></h2>
+            <td style="witdh:20%"><h4 style="text-align:center"><b>Received time</b></h4></td>
+            <td style="witdh:30%"><h4 style="text-align:center"><b>From</b></h4></td>
+            <td style="witdh:50%"><h4 style="text-align:center"><b>Topic</b></h4></td>
           </tr>
           <tr>
             <h3><td style="witdh:20%">1 Nov 2014 at 7:03 AM</td></h3>
             <h3><td style="witdh:30%">Frank_BlackTie@BumboBay.com</td></h3>
+            <h3><td style="witdh:50%">Re:thank you for solving the problem</td></h3>
+          </tr>
+          <tr>
+            <h3><td style="witdh:20%">29 Oct 2014 at 5:49 PM</td></h3>
+            <h3><td style="witdh:30%">Frank_BlackTie@BumboBay.com</td></h3>
             <h3><td style="witdh:50%">Fuck off asshole!!!</td></h3>
+          </tr>
+          <tr>
+            <h3><td style="witdh:20%">20 Oct 2014 at 5:47 AM</td></h3>
+            <h3><td style="witdh:30%">Chucha@BumboBay.com</td></h3>
+            <h3><td style="witdh:50%">Re:Asking for the product details</td></h3>
           </tr>
         </table>
     </div>
