--- a/application/views/assets/css/main.css
+++ b/application/views/assets/css/main.css
@@ -135,11 +135,11 @@ a:after {
 #headerwrap {
 	background: url(../img/header-bg-filter3.jpg) no-repeat center top;
 	margin-top: -10px;
-	padding-top: 20px;
+	padding-top:20px;
 	text-align:center;
 	background-attachment: relative;
 	background-position: center center;
-	min-height: 380px;
+	min-height: 500px;
 	width: 100%;
 	
     -webkit-background-size: 100%;
@@ -153,8 +153,29 @@ a:after {
     background-size: cover;
 }
 
+#myheaderwrap {
+    background: url(../img/header-bg-filter3.jpg) no-repeat center top;
+    margin-top: -10px;
+    padding-top:20px;
+
+    background-attachment: relative;
+    background-position: center center;
+    min-height: 500px;
+    width: 100%;
+    
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
+
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 #headerwrap h1 {
-	margin-top: 70px;
+	margin-top: 100px;
 	color: white;
 	font-size: 70px;
 	font-weight: 300;
