cart page added watchlist page edited

--- a/application/views/watchlist.html
+++ b/application/views/watchlist.html
@@ -62,24 +62,44 @@
         </div><!--/.nav-collapse -->
       </div>
     </div>
+  <div id="headerwrap">
+    <div class="container">
+      <div class="row centered">
+        <div class="col-lg-8 col-lg-offset-2">
+        <h1>Want it that much ? Then <b>PAY</b> more.</h1>
+        <h2>- DumboBay -</h2>
+        
+        </div>
+      </div><!-- row -->
+    </div><!-- container -->
+  </div><!-- headerwrap -->
 
-	<div id="myheaderwrap">
+	<div>
 		<div class="container">
 			<div>
-				<div class="col-lg-8 col-lg-offset-2">
-				  <h1 style="color:white">- Watchlist -</h1>
-          <br>
+				<div class="col-md-10 col-md-offset-1" style="padding-top:50px; padding-bottom:25px">
+          <div class="row">
+            <div class="col-md-2" style="padding-left:20px">
+              <img src="assets/img/watchlist.png" width="130" height="100">
+            </div>
+            <div class="col-md-8">
+              <h1 style="color:black;padding-top:13px">Watchlist</h1>
+            </div>
+            <div class="col-md-2" style="padding-top:70px;padding-left:70px">
+              items: 4
+            </div>
+          </div>
 				</div>
         
-        <div class="col-md-8 col-md-offset-2" style="background-color:white;">
+        <div class="col-md-10 col-md-offset-1" style="background-color:white;">
           <ol style="list-style-type:none; padding-left: 0px">
-            <li class="watchlist">
+            <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
               <div class="row">
                 <div class="col-md-3">
-                  <img src="iphone6.jpg" width="185" height="104">
+                  <img src="assets/img/iphone6.jpg" width="185" height="104">
                 </div>
                 <div class="col-md-4">
-                  <h3><b>Product: </b>iPhone 6</h3>
+                  <h3>iPhone 6</h3>
                   <strong>Due date: </strong>12 Dec 14<br>
                   <a href="#">more info...</a>
                 </div>
@@ -96,9 +116,12 @@
                     </div>
                     <div class="col-md-10">
                       <div class="row">
-                        <label  style="left:10%; padding-top:5px" for="inputEmail" class="col-md-5">Max bid:</label>
-                        <div class="col-md-7" style="left:0%">
-                          <input style="width:90%" type="text" class="form-control" id="inputEmail" placeholder="Enter max bid" >
+                        <label  style="left:10%; padding-top:5px" for="inputEmail" class="col-md-4">Max bid:</label>
+                        <div class="col-md-5" style="left:0%; padding-right:0px">
+                          <input style="width:100%;padding-right:20px" type="text" class="form-control" id="inputEmail" placeholder="Enter max bid" >
+                        </div>
+                        <div style="float:left">
+                          <button type="button" class="btn btn-default">Bid</button>
                         </div>
                       </div>
                     </div>
@@ -107,15 +130,13 @@
               </div>
             </li>
 
-            <li><hr></li>
-
-            <li class="watchlist">
+            <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
               <div class="row">
                 <div class="col-md-3">
-                  <img src="iphone6.jpg" width="185" height="104">
+                  <img src="assets/img/iphone6.jpg" width="185" height="104">
                 </div>
                 <div class="col-md-4">
-                  <h3><b>Product: </b>iPhone 6</h3>
+                  <h3>iPhone 6</h3>
                   <strong>Due date: </strong>12 Dec 14<br>
                   <a href="#">more info...</a>
                 </div>
@@ -132,9 +153,12 @@
                     </div>
                     <div class="col-md-10">
                       <div class="row">
-                        <label  style="left:10%; padding-top:5px" for="inputEmail" class="col-md-5">Max bid:</label>
-                        <div class="col-md-7" style="left:0%">
-                          <input style="width:90%" type="text" class="form-control" id="inputEmail" placeholder="Enter max bid" >
+                        <label  style="left:10%; padding-top:5px" for="inputEmail" class="col-md-4">Max bid:</label>
+                        <div class="col-md-5" style="left:0%; padding-right:0px">
+                          <input style="width:100%;padding-right:20px" type="text" class="form-control" id="inputEmail" placeholder="Enter max bid" >
+                        </div>
+                        <div style="float:left">
+                          <button type="button" class="btn btn-default">Bid</button>
                         </div>
                       </div>
                     </div>
@@ -142,16 +166,14 @@
                 </div>
               </div>
             </li>
-            
-            <li><hr></li>
 
-            <li class="watchlist">
+            <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
               <div class="row">
                 <div class="col-md-3">
-                  <img src="iphone6.jpg" width="185" height="104">
+                  <img src="assets/img/iphone6.jpg" width="185" height="104">
                 </div>
                 <div class="col-md-4">
-                  <h3><b>Product: </b>iPhone 6</h3>
+                  <h3>iPhone 6</h3>
                   <strong>Due date: </strong>12 Dec 14<br>
                   <a href="#">more info...</a>
                 </div>
@@ -168,9 +190,12 @@
                     </div>
                     <div class="col-md-10">
                       <div class="row">
-                        <label  style="left:10%; padding-top:5px" for="inputEmail" class="col-md-5">Max bid:</label>
-                        <div class="col-md-7" style="left:0%">
-                          <input style="width:90%" type="text" class="form-control" id="inputEmail" placeholder="Enter max bid" >
+                        <label  style="left:10%; padding-top:5px" for="inputEmail" class="col-md-4">Max bid:</label>
+                        <div class="col-md-5" style="left:0%; padding-right:0px">
+                          <input style="width:100%;padding-right:20px" type="text" class="form-control" id="inputEmail" placeholder="Enter max bid" >
+                        </div>
+                        <div style="float:left">
+                          <button type="button" class="btn btn-default">Bid</button>
                         </div>
                       </div>
                     </div>
@@ -178,16 +203,14 @@
                 </div>
               </div>
             </li>
-            
-            <li><hr></li>
 
-            <li class="watchlist">
+            <li class="watchlist" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 30px">
               <div class="row">
                 <div class="col-md-3">
-                  <img src="iphone6.jpg" width="185" height="104">
+                  <img src="assets/img/iphone6.jpg" width="185" height="104">
                 </div>
                 <div class="col-md-4">
-                  <h3><b>Product: </b>iPhone 6</h3>
+                  <h3>iPhone 6</h3>
                   <strong>Due date: </strong>12 Dec 14<br>
                   <a href="#">more info...</a>
                 </div>
@@ -204,11 +227,15 @@
                     </div>
                     <div class="col-md-10">
                       <div class="row">
-                        <label  style="left:10%; padding-top:5px" for="inputEmail" class="col-md-5">Max bid:</label>
-                        <div class="col-md-7" style="left:0%">
-                          <input style="width:90%" type="text" class="form-control" id="inputEmail" placeholder="Enter max bid" >
+                        <label  style="left:10%; padding-top:5px" for="inputEmail" class="col-md-4">Max bid:</label>
+                        <div class="col-md-5" style="left:0%; padding-right:0px">
+                          <input style="width:100%;padding-right:20px" type="text" class="form-control" id="inputEmail" placeholder="Enter max bid" >
+                        </div>
+                        <div style="float:left">
+                          <button type="button" class="btn btn-default">Bid</button>
                         </div>
                       </div>
+                      
                     </div>
                   </div>
                 </div>
