--- a/application/views/product.html
+++ b/application/views/product.html
@@ -51,19 +51,57 @@
 		</div>
 	</div>
 
-	<div id="headerwrap">
-		<div class="container">
-			<div class="row centered">
-				<div class="col-lg-8 col-lg-offset-2">
-					<h1>Just let me <b>Shop</b> and no one gets hurt.</h1>
-					<h2>- DumboBay -</h2>
-					<h3><a href="#" class="link-product"><b>> Products <</b></a></h3>
+	<!--PRODUCT-->
+	<div class="product" >
+		<div class="container w">
+			<div class="container">
+				<div class="row centered">
+					<!--<img src="assets/img/products.png" id="back" style="cursor:pointer">-->
+					<div class="col-lg-8 col-lg-offset-2">
+						<h1>- Products -</h1>
+					</div>
+				</div><!-- row -->
+			</div><!-- container -->
+		</div>
+		<div class="container desc">
+			<div class="row">
+				<div class="col-lg-6">
+					<h2 align="center">Direct Sale</h2>
+					<br>
+					<div style="height:450px;overflow:auto">
+						<div class="productwrapper">
+							<div class="productimage"><img src="assets/img/macbook.png"></div>
+							<div class="productinfo">
+								Macbook Air<br>
+								Price: 10,000 Baht<br>
+								Seller: Pookpick
+							</div>
+						</div>
+						<div><img src="assets/img/macbook.png">Macbook Air | 40,500฿</div>
+						<div><img src="assets/img/macbook.png">Macbook Air | 40,500฿</div>
+						<div><img src="assets/img/macbook.png">Macbook Air | 40,500฿</div>
+						<div><img src="assets/img/macbook.png">Macbook Air | 40,500฿</div>
+					</div>
+				</div><!-- col-lg-6 -->
+				<div class="col-lg-6">
+					<h2 align="center">Auction</h2>
+					<br>
+					<div style="height:450px;overflow:auto">
+					<div><img src="assets/img/macbook.png">Macbook Air | Max bid: 3500฿ | remaining time: 2:07 |</div>
+					<div><img src="assets/img/macbook.png">Macbook Air | Max bid: 10500฿ | remaining time: 1:24 |</div>
+					<div><img src="assets/img/macbook.png">Macbook Air | Max bid: 3500฿ | remaining time: 2:07 |</div>
+					<div><img src="assets/img/macbook.png">Macbook Air | Max bid: 3500฿ | remaining time: 2:07 |</div>
+					<div><img src="assets/img/macbook.png">Macbook Air | Max bid: 3500฿ | remaining time: 2:07 |</div>
 				</div>
+				</div>
+				<br><br>
+				<!--search -->
+
+				
 			</div><!-- row -->
 		</div><!-- container -->
-	</div><!-- headerwrap -->
-
-	
+	</div>
+	<!--end PRODUCT-->
 
 	<div class="container w">
 		<div class="row centered">
@@ -90,6 +128,7 @@
 		<br>
 		<br>
 	</div><!-- container -->
+
 
 <!-- FOOTER -->
 <div id="f">
@@ -157,4 +196,16 @@
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 
 </body>
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+
+  </body>
+
 </html>
