--- a/application/views/testdiv.html
+++ b/application/views/testdiv.html
@@ -7,9 +7,9 @@
 			<div style="width:100px;height:100px;border-style:solid;border-color:red;float:left"></div>
 			<div style="float:left">
 				<div style="width:220px;height:50px;border-style:solid;border-color:blue;float:top">
-					<label>input box:</label>
-					<input type="text" style="width:100px">
-					<button>OK</button>
+					<label>Macbook Air</label><br>
+					<label>Price: 10,000 Baht</label><br>
+					<label>Seller: Pookpick</label>
 				</div>
 				<div style="width:200px;height:20px;border-style:solid;border-color:green;float:top"></div>
 			</div>
