--- a/application/views/index.html
+++ b/application/views/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -50,21 +49,19 @@
 			</div><!--/.nav-collapse -->
 		</div>
 	</div>
-
+<!-- =======================================================================-->
 	<div id="headerwrap">
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-8 col-lg-offset-2">
-					<h1>Just let me <b>Shop</b> and no one gets hurt.</h1>
+					<h1>Just let me <b>Shop</b> <br>and no one gets hurt.</h1>
 					<h2>- DumboBay -</h2>
-					<h3><a href="#" class="link-product"><b>> Products <</b></a></h3>
+					<h3><a href="product.html" class="link-product"><b>> Products <</b></a></h3>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
 	</div><!-- headerwrap -->
-
-	
-
+<!-- ======================================================================= -->
 	<div class="container w">
 		<div class="row centered">
 			<br><br>
