--- a/application/views/watchlist.html
+++ b/application/views/watchlist.html
@@ -62,14 +62,11 @@
         </div><!--/.nav-collapse -->
       </div>
     </div>
-  <div id="headerwrap">
+
+  <div id="myheaderwrap">
     <div class="container">
       <div class="row centered">
-        <div class="col-lg-8 col-lg-offset-2">
-        <h1>Want it that much ? Then <b>PAY</b> more.</h1>
-        <h2>- DumboBay -</h2>
-        
-        </div>
+          <h2>Want it that much ? Then <b>PAY</b> more. <b>-DumboBay-</b></h3> 
       </div><!-- row -->
     </div><!-- container -->
   </div><!-- headerwrap -->
