--- a/application/views/index.html
+++ b/application/views/index.html
@@ -56,7 +56,7 @@
 				<div class="col-lg-8 col-lg-offset-2">
 					<h1>Just let me <b>Shop</b> <br>and no one gets hurt.</h1>
 					<h2>- DumboBay -</h2>
-					<h3><a href="product.html" class="link-product"><b>> Products <</b></a></h3>
+					<h2><a href="product.html" class="link-product"><b>> Products <</b></a></h2>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
@@ -118,13 +118,13 @@
 								<div class="form-group">
 									<label style="left:20%" for="inputEmail" class="col-lg-2 control-label">Username</label>
 									<div class="col-lg-10">
-										<input style="width:50%" type="text" class="form-control" id="inputEmail" placeholder="Put your username in here." >
+										<input style="width:50%" type="text" class="form-control" size="20" id="username" name="username" placeholder="Put your username in here." >
 									</div>
 								</div>
 								<div class="form-group">
 									<label style="left:20%" for="inputPassword" class="col-lg-2 control-label">Password</label>
 									<div class="col-lg-10">
-										<input style="width:50%" type="password" class="form-control" id="inputPassword" placeholder="********">
+										<input style="width:50%" type="password" class="form-control" size="20" id="password" name="password" placeholder="********">
 									</div>
 								</div>
 							</div>
@@ -133,10 +133,7 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-					<a href="buyer_home.html"><button type="button" class="btn btn-danger">Sign In</button></a>
-					<a href="buyer_home.html"><button type="button" class="btn btn-danger">Sign In:Buyer</button></a>
-					<a href="seller_home.html"><button type="button" class="btn btn-danger">Sign In:Seller</button></a>
-					<a href="admin_home.html"><button type="button" class="btn btn-danger" >Sign In:Admin</button></a>
+					<a href="#"><button type="submit" value="login" class="btn btn-danger">Sign In</button></a>
 				</div>
 			</form>
 			<!-- /Log in form -->
