--- a/application/views/product_.html
+++ b/application/views/product_.html
@@ -102,7 +102,7 @@
 									<a href="#">More info..</a>
 								</div>
 								<div class="col-lg-4 productbutton">
-									<a data-toggle="modal" data-target="#amountform" href="#amountform"><button type="button" class="btn btn-default">Add to Cart</button></a>
+									<a data-toggle="modal" data-target="#addToCart" href="#addToCart"><button type="button" class="btn btn-default">Add to Cart</button></a>
 								</div>
 							</div>
 							<hr>
@@ -117,7 +117,7 @@
 									<a href="#">More info..</a>
 								</div>
 								<div class="col-lg-4 productbutton">
-									<a data-toggle="modal" data-target="#amountform" href="#amountform"><button type="button" class="btn btn-default">Add to Cart</button></a>
+									<a data-toggle="modal" data-target="#addToCart" href="#addToCart"><button type="button" class="btn btn-default">Add to Cart</button></a>
 								</div>
 							</div>
 							<hr>
@@ -132,7 +132,7 @@
 									<a href="#">More info..</a>
 								</div>
 								<div class="col-lg-4 productbutton">
-									<a data-toggle="modal" data-target="#amountform" href="#amountform"><button type="button" class="btn btn-default">Add to Cart</button></a>
+									<a data-toggle="modal" data-target="#addToCart" href="#addToCart"><button type="button" class="btn btn-default">Add to Cart</button></a>
 								</div>
 							</div>
 							<hr>
@@ -147,7 +147,7 @@
 									<a href="#">More info..</a>
 								</div>
 								<div class="col-lg-4 productbutton">
-									<a data-toggle="modal" data-target="#amountform" href="#amountform"><button type="button" class="btn btn-default">Add to Cart</button></a>
+									<a data-toggle="modal" data-target="#addToCart" href="#addToCart"><button type="button" class="btn btn-default">Add to Cart</button></a>
 								</div>
 							</div>
 							<hr>
@@ -162,7 +162,7 @@
 									<a href="#">More info..</a>
 								</div>
 								<div class="col-lg-4 productbutton">
-									<a data-toggle="modal" data-target="#amountform" href="#amountform"><button type="button" class="btn btn-default">Add to Cart</button></a>
+									<a data-toggle="modal" data-target="#addToCart" href="#addToCart"><button type="button" class="btn btn-default">Add to Cart</button></a>
 								</div>
 							</div>
 							<hr>
@@ -332,7 +332,7 @@
 
 		<!-- MODAL FOR ADD to CART -->
 		<!-- Modal -->
-		<div class="modal fade" id="amountform" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal fade" id="bidform" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
@@ -346,8 +346,8 @@
 									<legend>Add to Cart</legend>
 									<div align="center">
 										<div class="form-group" style="padding-left:40px;padding-right:40px">
-											<label for="inputMaxBid" class="col-lg-3 control-label">Amount: </label>
-											<div class="col-lg-9">
+											<label for="inputMaxBid" class="col-lg-4 control-label">Amount: </label>
+											<div class="col-lg-8">
 												<input type="text" class="form-control" id="inputAmount" placeholder="Enter amount">
 											</div>
 										</div>
@@ -357,7 +357,7 @@
 						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-							<a href="#"><button type="button" class="btn btn-submit">Submit</button></a>
+							<a href="#"><button type="button" class="btn btn-subnit">Sign In</button></a>
 						</div>
 					</form>
 				</div><!-- /.modal-content -->
