--- a/application/views/product.html
+++ b/application/views/product.html
@@ -38,7 +38,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">DUMB<i class="fa fa-circle"></i>BAY</a>
+				<a class="navbar-brand" href="#" style="padding:2px 15px 2px 15px"><img src="assets/img/dumbobay-logo-sm.png"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
@@ -62,11 +62,15 @@
 		<!-- =======================================================================-->
 		<!--PRODUCT-->
 		<div class="product" >
+
 			<div class="container w">
 				<div class="container">
-					<div class="row centered">
+					<div class="row">
 						<!--<img src="assets/img/products.png" id="back" style="cursor:pointer">-->
-						<div class="col-lg-8 col-lg-offset-2">
+						<div class="col-lg-6 col-lg-push-4">
+							<img src="assets/img/price-tag-icon.png">
+						</div>
+						<div class="col-lg-6" style="margin-top:20px;margin-left:-5%">
 							<h1>Products</h1>
 						</div>
 					</div><!-- row -->
@@ -75,7 +79,7 @@
 			<div class="container desc">
 				<div class="row">
 					<!-- DIRECT SALE ================================================ -->
-					<div class="col-lg-6">
+					<div class="col-lg-6 border-shadow border-left-radius">
 						<h2 align="center">Direct Sale</h2>
 						<br>
 						<!-- SEARCH DIRECT SALE-->
@@ -89,7 +93,7 @@
 						</div>
 						<!-- END OF SEARCH DIRECT SALE-->
 						<br>
-						<div style="height:450px;overflow:auto;">
+						<div class="productcontainer">
 							<hr>
 							<div class="row">
 								<div class="col-lg-4 centered productimg"> 
@@ -171,7 +175,7 @@
 					<!-- END OF DIRECT SALE ================================================ -->
 
 					<!-- AUCTION ================================================ -->
-					<div class="col-lg-6">
+					<div class="col-lg-6 border-shadow border-right-radius">
 						<h2 align="center">Auction</h2>
 						<br>
 						<!-- SEARCH AUCTION-->
@@ -185,7 +189,7 @@
 						</div>
 						<!-- END OF SEARCH AUCTION-->
 						<br>
-						<div style="height:450px;overflow:auto">
+						<div class="productcontainer">
 							<hr>
 							<div class="row">
 								<div class="col-lg-4 centered productimg"> 
@@ -249,28 +253,8 @@
 		<!-- =======================================================================-->
 		<div class="container w">
 			<div class="row centered">
-				<br><br>
-				<div class="col-lg-4">
-					<i class="fa fa-heart"></i>
-					<h4>DESIGN</h4>
-					<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
-				</div><!-- col-lg-4 -->
-
-				<div class="col-lg-4">
-					<!-- <i class="fa fa-laptop"></i> -->
-					<img src="assets/img/frappe_logo-small.gif">
-					<h4>Frappe & Co,.</h4>
-					<!-- <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p> -->
-				</div><!-- col-lg-4 -->
-
-				<div class="col-lg-4">
-					<i class="fa fa-trophy"></i>
-					<h4>SUPPORT</h4>
-					<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
-				</div><!-- col-lg-4 -->
+					<img src="assets/img/dumbobay_logo.png">
 			</div><!-- row -->
-			<br>
-			<br>
 		</div><!-- container -->
 
 
@@ -278,8 +262,7 @@
 		<div id="f">
 			<div class="container">
 				<div class="row centered">
-					<a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-dribbble"></i></a>
-
+					<img src="assets/img/frappe_logo-small.png">
 				</div><!-- row -->
 			</div><!-- container -->
 		</div><!-- Footer -->
