--- a/application/views/assets/css/dumbobaycss.css
+++ b/application/views/assets/css/dumbobaycss.css
@@ -21,5 +21,31 @@
 .auctionbutton p{
 	padding-top: 10px;
 }
+.productcontainer{
+	height:450px;
+	overflow:auto;
+	
+}
+.border-shadow{
+	-webkit-box-shadow: 0px 0px 30px 2px rgba(0,0,0,0.76);
+	-moz-box-shadow: 0px 0px 30px 2px rgba(0,0,0,0.76);
+	box-shadow: 0px 0px 30px 2px rgba(0,0,0,0.76);
+}
 
+.border-right-radius{
+	border-radius: 0px 15px 15px 0px;
+	-moz-border-radius: 0px 15px 15px 0px;
+	-webkit-border-radius: 0px 15px 15px 0px;
+
+}
+.border-left-radius{
+	border-radius: 15px 0px 0px 15px;
+	-moz-border-radius: 15px 0px 0px 15px;
+	-webkit-border-radius: 15px 0px 0px 15px;
+
+}
+.border-radius{
+	border-radius: 15px 15px 15px 15px;
+	-moz-border-radius: 15px 15px 15px 15px;
+	-webkit-border-radius: 15px 15px 15px 15px;
 }
