--- a/application/views/watchlist.html
+++ b/application/views/watchlist.html
@@ -43,7 +43,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">DUMB<i class="fa fa-circle"></i>BAY</a>
+          <a class="navbar-brand" href="#" style="padding:2px 15px 2px 15px"><img src="assets/img/dumbobay-logo-sm.png"></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -251,8 +251,8 @@
 			<br><br>
 			<div class="col-lg-4">
 				<i class="fa fa-heart"></i>
-				<h4>DESIGN</h4>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
+          <h4>DESIGN</h4>
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
 			</div><!-- col-lg-4 -->
 
 			<div class="col-lg-4">
@@ -263,8 +263,8 @@
 
 			<div class="col-lg-4">
 				<i class="fa fa-trophy"></i>
-				<h4>SUPPORT</h4>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
+          <h4>SUPPORT</h4>
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even believable.</p>
 			</div><!-- col-lg-4 -->
 		</div><!-- row -->
 		<br>
