--- a/application/views/cart.html
+++ b/application/views/cart.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="col-md-9" style="padding-bottom: 0px; padding-right:0px">
                   <div>
-                    <div class="row col-md-12" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 0px; padding-right:0px">
+                    <div class="row col-md-12" style="padding-bottom: 0px; padding-right:0px">
                       <div class="col-md-6">
                         <h3>27-inch iMac with Retina 5K Display</h3>
                       </div>
@@ -138,7 +138,7 @@
                 </div>
                 <div class="col-md-9" style="padding-bottom: 0px; padding-right:0px">
                   <div>
-                    <div class="row col-md-12" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 0px; padding-right:0px">
+                    <div class="row col-md-12" style="padding-bottom: 0px; padding-right:0px">
                       <div class="col-md-6">
                         <h3>iPhone 6</h3>
                       </div>
@@ -176,7 +176,7 @@
                 </div>
                 <div class="col-md-9" style="padding-bottom: 0px; padding-right:0px">
                   <div>
-                    <div class="row col-md-12" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 0px; padding-right:0px">
+                    <div class="row col-md-12" style="padding-bottom: 0px; padding-right:0px">
                       <div class="col-md-6">
                         <h3>iPhone 6</h3>
                       </div>
@@ -214,7 +214,7 @@
                 </div>
                 <div class="col-md-9" style="padding-bottom: 0px; padding-right:0px">
                   <div>
-                    <div class="row col-md-12" style="border-bottom:solid #c9c9c9 1px; padding-bottom: 0px; padding-right:0px">
+                    <div class="row col-md-12" style="padding-bottom: 0px; padding-right:0px">
                       <div class="col-md-6">
                         <h3>iPhone 6</h3>
                       </div>
