--- a/application/views/cart.html
+++ b/application/views/cart.html
@@ -66,7 +66,7 @@
     <div class="container">
       <div class="row centered">
         <div class="col-lg-8 col-lg-offset-2">
-        <h1>Want it that much ? then just <b>PAY</b> more.</h1>
+        <h1>Second thought ? Just hit <b>CHECK OUT</b>.</h1>
         <h2>- DumboBay -</h2>
         
         </div>
